I add the data access layer  and Login class to verify login process

--- a/HR/HR/HR.csproj
+++ b/HR/HR/HR.csproj
@@ -57,6 +57,8 @@
     <Compile Include="attendance\attendPage.Designer.cs">
       <DependentUpon>attendPage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Business_Layer\LOGIN_CLASS.cs" />
+    <Compile Include="Data_Access_Layer\DataAccessLayer.cs" />
     <Compile Include="imprest\imprestPage.cs">
       <SubType>Form</SubType>
     </Compile>
