I have done all process in Management Page, and connect it with the database

--- a/HR/HR/HR.csproj
+++ b/HR/HR/HR.csproj
@@ -58,6 +58,7 @@
       <DependentUpon>attendPage.cs</DependentUpon>
     </Compile>
     <Compile Include="Business_Layer\LOGIN_CLASS.cs" />
+    <Compile Include="Business_Layer\MANAGMENT_CLASS.cs" />
     <Compile Include="Data_Access_Layer\DataAccessLayer.cs" />
     <Compile Include="imprest\imprestPage.cs">
       <SubType>Form</SubType>
