I have done all process in department Page, and connect it with the database

--- a/HR/HR/HR.csproj
+++ b/HR/HR/HR.csproj
@@ -57,6 +57,7 @@
     <Compile Include="attendance\attendPage.Designer.cs">
       <DependentUpon>attendPage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Business_Layer\DEPARTEMNET_CLASS.cs" />
     <Compile Include="Business_Layer\LOGIN_CLASS.cs" />
     <Compile Include="Business_Layer\MANAGMENT_CLASS.cs" />
     <Compile Include="Data_Access_Layer\DataAccessLayer.cs" />
