--- a/HR/HR/HR.csproj
+++ b/HR/HR/HR.csproj
@@ -59,6 +59,7 @@
     </Compile>
     <Compile Include="Business_Layer\DEPARTEMNET_CLASS.cs" />
     <Compile Include="Business_Layer\LOGIN_CLASS.cs" />
+    <Compile Include="Business_Layer\MAJOR_CLASS.cs" />
     <Compile Include="Business_Layer\MANAGMENT_CLASS.cs" />
     <Compile Include="Data_Access_Layer\DataAccessLayer.cs" />
     <Compile Include="imprest\imprestPage.cs">
